--- a/package.json
+++ b/package.json
@@ -1,69 +1,71 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack --port=3001",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@ai-sdk/openai": "^2.0.42",
-    "@ai-sdk/react": "^2.0.60",
-    "@coinbase/cdp-sdk": "^1.38.3",
-    "@coinbase/x402": "0.6.6",
-    "@gsap/react": "^2.1.2",
-    "@modelcontextprotocol/sdk": "^1.18.1",
-    "@radix-ui/react-avatar": "^1.1.10",
-    "@radix-ui/react-collapsible": "^1.1.12",
-    "@radix-ui/react-dropdown-menu": "^2.1.16",
-    "@radix-ui/react-hover-card": "^1.1.15",
-    "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-scroll-area": "^1.2.10",
-    "@radix-ui/react-select": "^2.2.6",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@radix-ui/react-tooltip": "^1.2.8",
-    "@radix-ui/react-use-controllable-state": "^1.2.2",
-    "@t3-oss/env-nextjs": "0.13.8",
-    "@upstash/ratelimit": "^2.0.6",
-    "@upstash/redis": "^1.35.5",
-    "ai": "^5.0.60",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
-    "embla-carousel-react": "^8.6.0",
-    "gsap": "^3.13.0",
-    "lucide-react": "^0.544.0",
-    "mcp-handler": "^1.0.2",
-    "nanoid": "^5.1.6",
-    "next": "15.5.0",
-    "next-themes": "^0.4.6",
-    "radix-ui": "^1.4.2",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "react-syntax-highlighter": "^15.6.6",
-    "shiki": "^3.13.0",
-    "sonner": "^2.0.5",
-    "streamdown": "^1.3.0",
-    "tailwind-merge": "^3.3.1",
-    "tokenlens": "^1.3.1",
-    "tw-animate-css": "^1.3.4",
-    "use-stick-to-bottom": "^1.1.1",
-    "viem": "^2.37.12",
-    "x402-mcp": "0.1.1",
-    "x402-next": "^0.6.1",
-    "zod": "^3.25.76",
-    "zustand": "^5.0.8"
-  },
-  "devDependencies": {
-    "@biomejs/biome": "2.2.4",
-    "@tailwindcss/postcss": "^4.1.10",
-    "@tanstack/react-query-devtools": "^5.85.5",
-    "@types/node": "^20",
-    "@types/react": "~19.1.10",
-    "@types/react-dom": "^19",
-    "@types/react-syntax-highlighter": "^15.5.13",
-    "tailwindcss": "^4.1.10",
-    "typescript": "^5",
-    "ultracite": "5.4.3"
-  }
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"packageManager": "pnpm@10.0.0",
+	"scripts": {
+		"dev": "next dev --turbopack --port=3001",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@ai-sdk/openai": "^2.0.42",
+		"@ai-sdk/react": "^2.0.60",
+		"@coinbase/cdp-sdk": "^1.38.3",
+		"@coinbase/x402": "0.6.6",
+		"@gsap/react": "^2.1.2",
+		"@modelcontextprotocol/sdk": "^1.18.1",
+		"@radix-ui/react-avatar": "^1.1.10",
+		"@radix-ui/react-collapsible": "^1.1.12",
+		"@radix-ui/react-dropdown-menu": "^2.1.16",
+		"@radix-ui/react-hover-card": "^1.1.15",
+		"@radix-ui/react-progress": "^1.1.7",
+		"@radix-ui/react-scroll-area": "^1.2.10",
+		"@radix-ui/react-select": "^2.2.6",
+		"@radix-ui/react-slot": "^1.2.3",
+		"@radix-ui/react-tooltip": "^1.2.8",
+		"@radix-ui/react-use-controllable-state": "^1.2.2",
+		"@t3-oss/env-nextjs": "0.13.8",
+		"@upstash/ratelimit": "^2.0.6",
+		"@upstash/redis": "^1.35.5",
+		"@vercel/analytics": "^1.5.0",
+		"ai": "^5.0.60",
+		"class-variance-authority": "^0.7.1",
+		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.6.0",
+		"gsap": "^3.13.0",
+		"lucide-react": "^0.544.0",
+		"mcp-handler": "^1.0.2",
+		"nanoid": "^5.1.6",
+		"next": "15.5.0",
+		"next-themes": "^0.4.6",
+		"radix-ui": "^1.4.2",
+		"react": "19.1.0",
+		"react-dom": "19.1.0",
+		"react-syntax-highlighter": "^15.6.6",
+		"shiki": "^3.13.0",
+		"sonner": "^2.0.5",
+		"streamdown": "^1.3.0",
+		"tailwind-merge": "^3.3.1",
+		"tokenlens": "^1.3.1",
+		"tw-animate-css": "^1.3.4",
+		"use-stick-to-bottom": "^1.1.1",
+		"viem": "^2.37.12",
+		"x402-mcp": "0.1.1",
+		"x402-next": "^0.6.1",
+		"zod": "^3.25.76",
+		"zustand": "^5.0.8"
+	},
+	"devDependencies": {
+		"@biomejs/biome": "2.2.4",
+		"@tailwindcss/postcss": "^4.1.10",
+		"@tanstack/react-query-devtools": "^5.85.5",
+		"@types/node": "^20",
+		"@types/react": "~19.1.10",
+		"@types/react-dom": "^19",
+		"@types/react-syntax-highlighter": "^15.5.13",
+		"tailwindcss": "^4.1.10",
+		"typescript": "^5",
+		"ultracite": "5.4.3"
+	}
 }
